--- a/productcatalogue/pom.xml
+++ b/productcatalogue/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>uk.co.danielbryant.djshopping</groupId>
+    <groupId>com.productcatalogue</groupId>
     <artifactId>productcatalogue</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
@@ -67,7 +67,7 @@
                                         implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>uk.co.danielbryant.djshopping.productcatalogue.ProductServiceApplication</mainClass>
+                                    <mainClass>com.productcatalogue.ProductServiceApplication</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
